# aes-otr-embedded-benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md
embedded/esp32/: CMakeLists.txt
embedded/esp32/main/: CMakeLists.txt  main.c
embedded/nrf52/: CMakeLists.txt  prj.conf
embedded/nrf52/src/: main.c
embedded/stm32/: CMakeLists.txt  STM32U575ZITX_FLASH.ld  toolchain-gcc-arm-none-eabi.cmake
embedded/stm32/src/: hal_port.c  main.c
include/: otr128.h  otr128_backend.h  otr128_bench.h
scripts/: check_env.sh
src/: aes128_soft.c  backend_esp32.c  backend_nrf52.c  backend_stm32u5.c  bench.c  otr128.c
tests/: test_main.c
tools/: dump_vectors.c
